[tool.poetry]
name = "stonecharioteer"
version = "0.6.1"
description = "My personal utils and configs, managed via python library"
authors = ["Vinay Keerthi <11478411+stonecharioteer@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
qtile = ">=0.18.1"
rich = "^10.12.0"
toml = "^0.10.2"
psutil = "^5.8.0"
types-toml = "^0.10.1"
mypy = "^0.910"
python-xlib = "^0.31"
typeguard = "^2.13.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.15.0"
ipython = "^7.29.0"
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
